2012-01-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/CoreFoundation/CFBase.h:
	* Source/CFStringFormat.c:
	* Source/CFNumber.c:
	* Source/GSPrivate.h:
	* Source/GSHashTable.c: Fixes for 64-bit Windows.

2012-01-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Tools/: Remove make_c_interface tool.
	* Headers/CoreFoundation/CoreFoundation.h:
	* Source/GNUmakefile:
	* Source/common.mk: Remove CFStream from build for now.

2012-01-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c: Set correct delimiter and return an empty string
	instead of NULL for some functions just so the test suite won't crash.
	* Source/CFString.c: Fixed bug in CFStringCreateWithBytesNoCopy.
	* Source/CFBase.c: Fixed bug with kCFAllocatorNull.
	* Tests/CFURL/create.m: Ported some tests from -base.

2012-01-17 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSPrivate.h: Added function to guess file system encoding.
	* Source/CFURL.c: Added some more create functions.
	* Source/CFRuntime.c: Initialize CFURL class.
	* Tests/CFURL/create.m: Some simple create tests.

2012-01-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSPrivate.h:
	* Source/CFURL.c: Added percent escape replacement function.
	* Tests/CFURL/escaping.m: Added more tests.

2012-01-15 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GSPrivate.h:
	* Source/CFURL.c: Fixed bug in percent escape function.
	* Tests/CFURL/escaping.m: Added first CFURL test.

2012-01-14 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c:
	* Source/CFString.c:
	* Source/CFStringEncoding.c:
	* Source/GSPrivate.h: Redesigned Unicode conversion.
	* Headers/CoreFoundation/CFBase.h: Define __BIG_ENDIAN__ or 
	__LITTLE_ENDIAN__ macros for platforms do not already define them.
	* Headers/CoreFoundation/CFByteOrder.h: Use new endian macros.
	* Headers/CoreFoundation/ForFoundationOnly.h: Delete.


2012-01-11 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFURL.c:
	* Source/CFURL.m:
	* Source/common.mk: