@@ -1,5 +1,11 @@
 2012-01-17 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Source/GNUmakefile: Remove CFPropertyList from build.
+	* Source/CFURL.c: Basic work on Append functions.
+	* Tests/CFURL/create.m: Add more tests.
+
+2012-01-17 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Headers/CoreFoundation/CFBase.h:
 	* Source/CFStringFormat.c:
 	* Source/CFNumber.c:
